*Empty MediaWiki Message*

--- a/ნიკოლოზ_(მრავალმნიშვნელოვანი).mw
+++ b/ნიკოლოზ_(მრავალმნიშვნელოვანი).mw
@@ -12,7 +12,7 @@
 * [[ნიკოლოზ IX ]] - აღმოსავლეთ საქართველოს კათოლიკოს-პატრიარქი
 * [[ნიკოლოზ X ]] - აღმოსავლეთ საქართველოს კათოლიკოს-პატრიარქი
 * [[ნიკოლოზ თბილელი]] - სახელმწიფო და სასულიერო მოღვაწე
-* [[ნიკოლოზი]] - დასავლეთ საქართველოს (აფხაზეთის) კათოლიკოსი
+* [[ნიკოლოზი (XIII ს.)]] - დასავლეთ საქართველოს (აფხაზეთის) კათოლიკოსი
 * [[ნიკოლოზ კატარაწისძე]] - კალიგრაფი
 * [[ნიკოლოზ რუსთველი]] - საეკლესიო მოღვაწე
 
