*Empty MediaWiki Message*

--- a/ნერსე_I.mw
+++ b/ნერსე_I.mw
@@ -1,4 +1,4 @@
-'''ნერსე I''', ქართლის [[ერისმთავარი]] VII საუკუნის II ნახევარში. [[იოანე დრასხანაკერტელი|იოანე დრასხანაკერტელის]] ცნობით დაახლოებით 70-80-იან წლებში ნერსე I-მა დაამარცხა და განდევნა [[სომხეთი|სომხეთში]] მდგარი არაბთა ჯარის სარდალი [[ბარაბა]]. არის ვარაუდი, რომ ნერსე I [[ატენის სიონი|ატენის სიონის]] ერთ-ერთი ქვიტორთაგანია.
+'''ნერსე I''', ქართლის [[ერისმთავარი]] VII საუკუნის II ნახევარში. [[იოანეს დრასხანაკერტცი|იოანე დრასხანაკერტელის]] ცნობით დაახლოებით 70-80-იან წლებში ნერსე I-მა დაამარცხა და განდევნა [[სომხეთი|სომხეთში]] მდგარი არაბთა ჯარის სარდალი [[ბარაბა]]. არის ვარაუდი, რომ ნერსე I [[ატენის სიონი|ატენის სიონის]] ერთ-ერთი ქვიტორთაგანია.
 
 
 
