*Empty MediaWiki Message*

--- a/ცნობილი_ქართველები:_ო.mw
+++ b/ცნობილი_ქართველები:_ო.mw
@@ -17,7 +17,7 @@
 
 ==ონ==
 * [[ონანა მდივანი]] - პოეტი
-* [[ონელი არნო]] - პოეტი
+* [[ონელი, არნო]] - პოეტი
 * [[ონიანი, ვასილ]] - მეცნიერი
 * [[ონიანი, ვახტანგ]] - მოქანდაკე და გრაფიკოსი
 * [[ონიანი, თენგიზ]] - ფიზიოლოგი
