*Empty MediaWiki Message*

--- a/გიგა_ბოკერია.mw
+++ b/გიგა_ბოკერია.mw
@@ -1,13 +1,15 @@
-[[სურათი:giga.jpg||frame|180px|გიგა ბოკერია]] '''გიგა (გიორგი) ბოკერია''' (დ.[[20 აპრილი]], [[1972]]) -- ქართველი პოლიტიკური მოღვაწე, საქართველოს პარლამენტის წევრი, იურიდიულ საკითხთა კომიტეტის თავმჯდომარის მოადგილე, თავდაცვისა და უშიშროების კომიტეტის წევრი, პოლიტიკური პარტია [[ერთიანი ნაციონალური მოძრაობა (პარტია)|ერთაინი ნაციონალური მოძრაობის]] ერთ–ერთი ლიდერი. 
+[[სურათი:giga.jpg||frame|180px|გიგა ბოკერია]] '''გიგა (გიორგი) ბოკერია''' (* [[20 აპრილი]], [[1972]]) - ქართველი პოლიტიკური მოღვაწე, საქართველოს პარლამენტის წევრი, იურიდიულ საკითხთა კომიტეტის თავმჯდომარის მოადგილე, თავდაცვისა და უშიშროების კომიტეტის წევრი, პოლიტიკური პარტია [[ერთიანი ნაციონალური მოძრაობა (პარტია)|ერთაინი ნაციონალური მოძრაობის]] ერთ–ერთი ლიდერი. 
 
 
 ==საზოგადოებრივი მოღვაწეობა==
 [[1996]] წელს ლევან რამიშვილთან, გივი თარგამაძესთან და დავით ზურაბიშვილთან ერთად დააფუძნა ლიბერალური საჯარო პოლიტიკის ადვოკატირების არასამეწარმეო და არაპარტიული საზოგადოება [[თავისუფლების ინსტიტუტი]], სადაც უფლებადაცვითი პროგრამების კოორდინატორი და შემდგომში – უფროსი იურიდიული მრჩეველი იყო. 1989–1995 წლებში გიგა ბოკერია სტუდენტური მოძრაობის ერთ–ერთი ლიდერი იყო, კერძოდ, ივანე ჯავახიშვილის სახელობის [[თბილისის სახელმწიფო უნივერსიტეტი|თბილისის სახელმწიფო უნივერსიტეტის]] პრეს–კლუბის აქტიური წევრი. 1992 წლიდან ეწევა ჟურნალისტურ საქმიანობას: გაზეთ [[7 დღე (გაზეთი)|7 დღე]] ჟურნალისტი ([[1992]]), გაზეთ [[მიმომხილველი (გაზეთი)|მიმომხილველის]] პოლიტიკური რედატქორი (1992–[[1993]]), სახელმწიფო [[პირველი არხი (რადიო)|რადიოს პირველი არხის]] გადაცემის "პიკის სააათი" ჟურნალისტი (1993), [[რადიო თავისუფლება|რადიო თავისუფლების]] ჟურნალისტი ([[1994]]), "არგუმენტი" (პოლიტიკური რედაქტორი 1995–1996), სამაუწყებლო კომპანია [[რუსთავი 2]]–ის სადისკუსიო პროგრამის "აქცენტები" წამყვანი ([[1996]]).
 
-[[2003]] წელს არაძალადობრივი რევოლუციების ტექნოლოგიის გაცნობის მიზნით [[სერბია|სერბიაში]] სტუმრობის შემდეგ, ბოკერია დაეხმარა ქართველ სტუდენტებს სერბულ მოძრაობა [[ოტპორი (მოძრაობა)|ოტპორის]] აქტივისტებთან კონტაქტების დამყარებაში. ამან ხელი შეუწყო ახალგაზრდული მოძრაობა [[კმარა (მოძრაობა)|კმარას]] დაფუძნებას, რომელმაც წამყვანი როლი ითამაშა 2003 წლის ნოემბერში [[ვარდების რევოლუცია|ვარდების რევოლუციის]] დროს.
+[[2003]] წელს არაძალადობრივი რევოლუციების ტექნოლოგიის გაცნობის მიზნით [[სერბია და მონტენეგრო|სერბიაში]] სტუმრობის შემდეგ, ბოკერია დაეხმარა ქართველ სტუდენტებს სერბულ მოძრაობა [[ოტპორი (მოძრაობა)|ოტპორის]] აქტივისტებთან კონტაქტების დამყარებაში. ამან ხელი შეუწყო ახალგაზრდული მოძრაობა [[კმარა (მოძრაობა)|კმარას]] დაფუძნებას, რომელმაც წამყვანი როლი ითამაშა 2003 წლის ნოემბერში [[ვარდების რევოლუცია|ვარდების რევოლუციის]] დროს.
 
-რევოლუციის შემდეგ გიგა ბოკერია არჩეულ იქნა [[საქარჳელოს პარლამენტი|საქართველოს პარლამენტის]] წევრად, სადაც მისი ინციატივითა და ავტორობით მრავალი ლიბერალური კანონი იქნა მიღებული.
+რევოლუციის შემდეგ გიგა ბოკერია არჩეულ იქნა [[საქართველოს პარლამენტი|საქართველოს პარლამენტის]] წევრად, სადაც მისი ინციატივითა და ავტორობით მრავალი ლიბერალური კანონი იქნა მიღებული.
 
 [[კატეგორია:ქართველები]]
+[[კატეგორია:ქართველი პოლიტიკური მოღვაწეები]]
+[[კატეგორია:დაბადებული  1972]]
 
 [[en:Giga Bokeria]]
