*Empty MediaWiki Message*

--- a/გიორგი_I_(საქართველოს_მეფე).mw
+++ b/გიორგი_I_(საქართველოს_მეფე).mw
@@ -1,3 +1,8 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გიორგი I'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გიორგი I]]
+|}</small>
+
 '''გიორგი I''', (* [[998]] ან [[1002]] ―   †  [[16 აგვისტო]]. [[1027]]) [[საქართველო|საქართველოს]] მეფე [[1014]]-იდან, [[ბაგრატ III|ბაგრატ III-ის]] ძე. გამეფებისთანავე დიდგვაროვანი აზნაურები აუჯანყდნენ მცირეწლოვან მეფეს და [[ჰერეთი|ჰერეთ]]-[[კახეთი]] საქართველოს ჩამოაშორეს. გიორგი I-მა ისარგებლა იმით, რომ 1014-16 [[ბიზანტია|ბიზანტიის]] იმპერატორი [[ბასილი II]] [[ბულგარელები|ბულგარელებს]] ეომებოდა, გადალახა ბიზანტიის საზღვარი და [[ტაო]] დაიბრუნა. [[1019]] [[ბასილი II|ბასილ II-მ]] ბულგარელებთან ომი დაამთავრა და გიორგი I-ს სადავო ტერიტორიის დაცლა მოსთხოვა. [[1021]] ბიზანტიის ჯარი საქართველოში შემოიჭრა. ქართველები რამდენჯერმე დამარცხდნენ ([[შირიმნის ბრძოლა 1021]] და [[საქართველოს ბიზანტიის ომები XI საუკუნეში]]). გიორგი I იძულებული გახდა [[თრიალეთი|თრიალეთში]] გადასულიყო, სადაც მაშველი ჯარი დახვდა. კეისარი მოერიდა ომს, დასაზამთრებლად [[ქალდია|ქალდიაში]] ([[ტრაპიზონი|ტრაპიზონის]] მახლობლად) წავიდა და საქართველოში ახალი ლაშქრობისათვის ემზადებოდა. გიორგი I-მა საზავო მოლაპარაკება დაიწყო და ამავე დროს ხელსაყრელ მომენტს უცდიდა ომის გასაახლებლად. ამ დროს ბიზანტიაში იმპერატორის წინააღმდეგ აჯანყება დაიწყო ნიკიფორე და ქსიფეს მეთაურობით. გიორგი I-მა ამით ისარგებლა, კავშირი დაამყარა და უარი განაცხადა ბიზანტიასთან არახელსაყრელი ზავის დადებაზე. მაგრამ აჯანყება დამარცხდა. გამომჟღავნდა მასში ქართველთა მონაწილეობაც. კეისარმა გიორგი I-ს კვლავ მოსთხოვა სადავო ტერიტორიების დაცლა. საქართველოს მეფემ განაახლა საზავო მოლაპარაკება, თან ისევ ბრძოლისათვის ემზადებოდა, მაგრამ ბიზანტიამ დაასრო ომის დაწყება. თავდაპირველად უპირატესობა გიორგი I-ის მხარეზე იყო, მაგრამ საბოლოოდ ქართველები დამარცხდნენ. 1022/23 გიორგი I დათანხმდა ზავის მძიმე პირობებს: სადავო ტერიტორია ბიზანტიამ მიიტაცა; ტახტის მემკვიდრე [[ბაგრატ IV|ბაგრატი]] სამი წლის ვადით მძევლად გაიგზავნა [[კონსტანტინოპოლი|კონსტანტინოპოლში]]. საქართველომ დაკარგა ე.წ. [[დავით III|დავით III კურაპალატის]] მემკვიდრეობა. ჩანს გიორგი I ემზადებოდა რევანშისათვის: [[1025]] გამომჟღავნდა ვასპურაკანის მმართველის ნიკიფორე კომნენოსის შეთქმულება იმპერატორის წინააღმდეგ, რომლის მონაწილეც გიორგი I იყო.
 
 გიორგი I-ის დროს დიდ საომარ ოპერაციებთან ერთად მიმდინარეობდა მნიშვნელოვანი სამშენებლო სამუშაოები. მის მეფობაში აიგო [[მცხეთა|მცხეთის]] [[სვეტიცხოველი|სვეტიცხოვლის]] ტაძარი.
