*Empty MediaWiki Message*

--- a/გიორგი_I_(აფხაზთა_მეფე).mw
+++ b/გიორგი_I_(აფხაზთა_მეფე).mw
@@ -1,4 +1,8 @@
-'''გიორგი I''', ''აღწეფელი'', აფხაზთა (დასავლეთ საქართველოს) მეფე [[861]]-[[868]]; [[ლეონ II]]-ის ძე. გამეფებამდე მისი საუფლისწულო მამული იყო აღწეფი. აქედან წარმოდგება ზედწოდება - აღწეფელი. თავისი წინამორბედებივით ცდილობდა დაუფლებოდა ქართლს, რაც დროებით შეძლო კიდეც და იქ ერისთავად თავისი ძმისშვილი, [[ დემეტრე II | დემეტრე II]]-ის ვაჟი დასვა.
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გიორგი I'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გიორგი I]]
+|}</small>
+'''გიორგი I''', ''აღწეფელი'', აფხაზთა (დასავლეთ საქართველოს) [[მეფე]] [[861]]-[[868]]; [[ლეონ II|ლეონ II-ის]] ძე. გამეფებამდე მისი საუფლისწულო მამული იყო აღწეფი. აქედან წარმოდგება ზედწოდება - აღწეფელი. თავისი წინამორბედებივით ცდილობდა დაუფლებოდა ქართლს, რაც დროებით შეძლო კიდეც და იქ ერისთავად თავისი ძმისშვილი, [[ დემეტრე II | დემეტრე II-ის]] ვაჟი დასვა.
 
 
 
