*Empty MediaWiki Message*

--- a/გიორგი_I_(იმერეთის_მეფე).mw
+++ b/გიორგი_I_(იმერეთის_მეფე).mw
@@ -1,4 +1,8 @@
-'''გიორგი I''' (―  †  [[1392]]), იმერეთის მეფე 1389-92, [[ბაგრატ I  ერისთავი | ბაგრატ I ერისთავის ძე]]. გიორგი I-ის გამეფების დროს იმერეთის ზოგიერთი ციხესიმაგრე, მათ შორის ქუთაისისა, ჯერ კიდევ საქართველოს მეფე [[ბაგრატ V | ბაგრატ V-სა]] და მის მემკვიდრე [[გიორგი VII, იმერეთის მეფე | გიორგის]] ეჭირათ. გურიის, ოდიშის და სხვა მთავრების მათ მხარეზე იყვნენ და გიორგი I-ის მეფობას არ ცნობდნენ. გიორგი I-მა ამ ციხესიმაგრეთა დაკავება მოახერხა. [[1390]] მან აფხაზეთის  კათალიკოსად თავისი მომხრე არსენი დასვა და ამით სასულიერო ფეოდალთა წრეშიც დასაყრდენი გაიჩინა. [[1392]] გიორგი I-მა ოდიშის მთავრის,  [[ვამეყ I დადიანი| ვამეყ I დადიანის]] წინააღმდეგ ილაშქრა, მაგრამ დამარცხდა და თვითონაც ბრძოლაში დაიღუპა.
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გიორგი I'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გიორგი I]]
+|}</small>
+'''გიორგი I''' (―  †  [[1392]]), [[იმერეთის სამეფო|იმერეთის სამეფოს]] [[მეფე]] [[1389]]-[[1392]], [[ბაგრატ I  ერისთავი | ბაგრატ I ერისთავის ძე]]. გიორგი I-ის გამეფების დროს იმერეთის ზოგიერთი ციხესიმაგრე, მათ შორის ქუთაისისა, ჯერ კიდევ საქართველოს მეფე [[ბაგრატ V | ბაგრატ V-სა]] და მის მემკვიდრე [[გიორგი VII, იმერეთის მეფე | გიორგის]] ეჭირათ. გურიის, ოდიშის და სხვა მთავრების მათ მხარეზე იყვნენ და გიორგი I-ის მეფობას არ ცნობდნენ. გიორგი I-მა ამ ციხესიმაგრეთა დაკავება მოახერხა. [[1390]] მან აფხაზეთის  კათოლიკოსად თავისი მომხრე არსენი დასვა და ამით სასულიერო ფეოდალთა წრეშიც დასაყრდენი გაიჩინა. [[1392]] გიორგი I-მა ოდიშის მთავრის,  [[ვამეყ I დადიანი| ვამეყ I დადიანის]] წინააღმდეგ ილაშქრა, მაგრამ დამარცხდა და თვითონაც ბრძოლაში დაიღუპა.
 
 
 
