--- a/გიორგი_I_გურიელი.mw
+++ b/გიორგი_I_გურიელი.mw
@@ -1,4 +1,10 @@
-'''გიორგი I გურიელი''' (―    †     [[1512]]), გურიის მთავარი [[1483]]-[[1512]], [[კახაბერ II გურიელი | კახაბერ II გურიელის]] ძე, იმერეთის მეფის ვასალი და მისი მსახურთუხუცესი. ისარგებლა იმერეთში ოსმალთა შემოსევით და უარი თქვა იმერთა მეფის მორჩილებაზე. XVI საუკუნის დასაწყისში მოიგერია ოსმალთა შემოსევა ჭანეთის ჩრდილოეთ ნაწილში, რომელიც მაშინ გურიის სამთავროში შედიოდა. [[1511]] სამცხის ათაბაგ მზეჭაბუკთან ბრძოლაში დაკარგა აჭარა და ჭანეთი.
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გიორგი I'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გიორგი I]]
+|}</small>
+'''გიორგი I გურიელი''' (†     [[1512]]), [[გურიის სამთავრო|გურიის]] მთავარი [[1483]]-[[1512]], [[კახაბერ II გურიელი | კახაბერ II გურიელის]] ძე, იმერეთის მეფის [[ვასალი]] და მისი [[მსახურთუხუცესი]]. ისარგებლა იმერეთში ოსმალთა შემოსევით და უარი თქვა იმერთა მეფის მორჩილებაზე. XVI საუკუნის დასაწყისში მოიგერია ოსმალთა შემოსევა ჭანეთის ჩრდილოეთ ნაწილში, რომელიც მაშინ გურიის სამთავროში შედიოდა. [[1511]] სამცხის ათაბაგ მზეჭაბუკთან ბრძოლაში დაკარგა აჭარა და ჭანეთი.
 
 
 [[კატეგორია:ქართველები]]
+[[კატეგორია:გურიის მთავრები]]
+[[კატეგორია:გარდაცვლილი 1512]]
