--- a/გიორგი_I_დადიანი.mw
+++ b/გიორგი_I_დადიანი.mw
@@ -1,5 +1,10 @@
-'''გიორგი I დადიანი''' (―    †     [[1323]]), [[ოდიშის სამთავრო | ოდიშის]] მთავარი,  [[დადიანი, ბედან | ბედან დადიანის]] ძე. პირველად [[1293]] იხსენიება ოდიშის ერისთავად, მაგრამ როდის მიიღო ეს ტიტული უცნობია. იგი აქტიურად მონაწილეობდა შინაფეოდალურ ომებში, რომელიც დასავლეთ საქართველოში დაიწყო [[დავით VI  | დავით VI]] ნარინის ([[1245]]-[[1293]]) გარდაცვალების შემდეგ. გიორგი I დადიანმა თავისი საერისთავოს საზღვრები ანაკოფიამდე გააფართოვა.
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გიორგი I'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გიორგი I]]
+|}</small>
+'''გიორგი I დადიანი''' ( †  [[1323]]), [[ოდიშის სამთავრო | ოდიშის]] მთავარი,  [[დადიანი, ბედან | ბედან დადიანის]] ძე. პირველად [[1293]] იხსენიება ოდიშის [[ერისთავი (თანამდებობა)|ერისთავად]], მაგრამ როდის მიიღო ეს ტიტული უცნობია. იგი აქტიურად მონაწილეობდა შინაფეოდალურ ომებში, რომელიც დასავლეთ საქართველოში დაიწყო [[დავით VI  | დავით VI]] ნარინის ([[1245]]-[[1293]]) გარდაცვალების შემდეგ. გიორგი I დადიანმა თავისი საერისთავოს საზღვრები ანაკოფიამდე გააფართოვა.
 
 
 [[კატეგორია:ქართველები]]
 [[კატეგორია:სამეგრელოს (ოდიშის) მთავრები]]
+[[კატეგორია:გარდაცვლილი  1323]]
