*Empty MediaWiki Message*

--- a/ცნობილი_ქართველები:_ო.mw
+++ b/ცნობილი_ქართველები:_ო.mw
@@ -32,7 +32,7 @@
 * [[ორახელაშვილი, მარიამ]] - რევოლუციური მოძრაობის აქტიური მონაწილე საქართველოში
 * [[ორახელაშვილი, მერაბ]] - ინჟინერი, პედაგოგი და მეცნიერი
 * [[ორბელი, ელიგუმ]] - მოღვაწე
-* [[ორბელი, ელიგუმ ლიპარტის ძე]]  - სახელმწიფო მოღვაწე
+* [[ორბელი, ელიგუმ ლიპარიტის ძე]]  - სახელმწიფო მოღვაწე
 * [[ორბელი, ივანე]] - მოღვაწე
 * [[ორბელი, ივანე სუმბატის ძე]] - სახელმწიფო მოღვაწე
 * [[ორბელი, იოსებ]] - აღმოსავლეთმცოდნე და საზოგადო მოღვაწე
