--- a/ელიგუმ_ორბელი.mw
+++ b/ელიგუმ_ორბელი.mw
@@ -1,1 +1,5 @@
-#REDIRECT [[ორბელი, ელიგუმ ლიპარიტის ძე]]
+'''ელიგუმ ორბელი''' (†  დაახლოებით [[1195]]/[[1196]]), XII საუკუნის II ნახევრის მოღვაწე, საქართველოდან გადახვეწილი [[ორბელი, ლიპარიტ სუმბატის ძე|ლიპარიტ ორბელის ძე]]. სტეფანოს ორბელიანის ცნობით, მან ირანის ათაბაგისაგან სამამულოდ მიიღო ქალაქი ჰამიანი და 12 წლით დაინიშნა რეის, ისპაჰანისა და ყაზვინის ამირად. შემდეგ ელიგუმმა მამულები მიიღო ნახევაჭანში (ციხე ერენჯაკი, სოფელი ჭაჰუკი და ქალასრაჰი) და გამუსლიმანდა.
+
+
+[[კატეგორია:ქართველები]]
+[[კატეგორია:გარდაცვლილი 1195]]
