*Empty MediaWiki Message*

--- a/გიორგი_II_(საქართველოს_მეფე).mw
+++ b/გიორგი_II_(საქართველოს_მეფე).mw
@@ -1,18 +1,22 @@
-'''გიორგი II''', [[საქართველო | საქართველოს]] მეფე 1072-89, [[ბაგრატ IV|ბაგრატ IV-ის]] ძე.
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გიორგი II'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გიორგი II]]
+|}</small>
 
-მას მძიმე საშინაო და საგარეო პირობებში მოუხდა მეფობა. 1073 მეფეს განუდგნენ დიდგვაროვანი ფეოდალები [[ნიანია ქვაბულის ძე|ნიანია ქვაბულის ძე]], [[ივანე ლიპარიტის ძე|ივანე ლიპარიტის ძე]] და [[ვარდან სვანთა ერისთავი|ვარდან სვანთა ერისთავი]]. ნიანია ქვაბულის ძემ  [[ქუთაისი|ქუთაისი]] დაიკავა, ივანე ლიპარიტის ძემ კახელები მოიშველია და ქსნისპირი დაიპყრო, ხოლო ვარდანმა სვანები ააჯანყა და საეგრო დაარბია. მათი დამორჩილების  შემდგომ გიორგი II გარკვეულ დათმობაზე წავიდა და ურჩი ყმები "წყალობით დაფარა". ივანე ლიპარტის ძეს [[სამშვილდე|სამშვილდე]] უბოძა, მის ვაჟს ლიპარტს - [[ლოწობანი|ლოწობანი]] [[რუსთავი|რუსთავის]] ნაცვლად (ეს უკანასკნელი კახელებს გადაეცა), ნიანია ქვაბულის ძეს - თმოგვი, ვარდან სვანთა ერისთავს - ასკალანა და სხვ.
+'''გიორგი II''', [[საქართველოს სამეფო | საქართველოს]] მეფე [[1072]]-[[1089]], [[ბაგრატ IV|ბაგრატ IV-ის]] ძე.
 
-1074 ივანე ლიპარიტის ძე კვლავ განუდგა მეფეს. გიორგი II-მ მესხთა ლაშქრით და კახთა [[აღსართან I|მეფე აღსართანის]] დახმარებით გამდგარი ფეოდალი დაამარცხა. ლიპარიტს ლოწობანი წაართვეს და სამეფოს შემოუერთეს. მალე მეფე და ივანე ლიპარიტის ძე დაზავდნენ. ივანე ერთგულების პირობით კლდეკარისა და სამშვილდის ერისთავად იქნა დამტკიცებული. მაგრამ ურჩმა ფეოდალმა გიორგი II-ის მეციხოვნეებს [[გაგი|გაგი]] გამოსტყუა და განძის პატრონს ფადლონს მიჰყიდა.
+მას მძიმე საშინაო და საგარეო პირობებში მოუხდა მეფობა. [[1073]] მეფეს განუდგნენ დიდგვაროვანი ფეოდალები [[ნიანია ქვაბულის ძე|ნიანია ქვაბულის ძე]], [[ივანე ლიპარიტის ძე|ივანე ლიპარიტის ძე]] და [[ვარდან სვანთა ერისთავი|ვარდან სვანთა ერისთავი]]. ნიანია ქვაბულის ძემ  [[ქუთაისი|ქუთაისი]] დაიკავა, ივანე ლიპარიტის ძემ კახელები მოიშველია და ქსნისპირი დაიპყრო, ხოლო ვარდანმა სვანები ააჯანყა და საეგრო დაარბია. მათი დამორჩილების  შემდგომ გიორგი II გარკვეულ დათმობაზე წავიდა და ურჩი ყმები "წყალობით დაფარა". ივანე ლიპარტის ძეს [[სამშვილდე|სამშვილდე]] უბოძა, მის ვაჟს ლიპარტს - [[ლოწობანი|ლოწობანი]] [[რუსთავი|რუსთავის]] ნაცვლად (ეს უკანასკნელი კახელებს გადაეცა), ნიანია ქვაბულის ძეს - თმოგვი, ვარდან სვანთა ერისთავს - ასკალანა და სხვ.
 
-1073 ან 1074 საქართველოს შემოესია "დიდ სელჩუკთა" სახელმწიფოს სულთანი [[მალიქ-შაჰი]], რომელმაც აიღო სამშვილდე, მოარბია [[ქართლი]] და დიდძალი ტყვიითა და ნადავლით უკან გაბრუნდა. იმავე ხანებში სულთნის ლაშქრით საქართველოს შემოესია მალიქ-შაჰის მიერ განძის გამგედ დანიშნული სარანგი. გიორგი II-მ აღსართან კახთა მეფე მოიშველია და [[ფარცხისის ბრძოლა 1074|ფარცხისთან]] დაამარცხა მტერი. ამ გამარჯვების შემდეგ, როგორც [[მატიანე ქართლისა|"მატიანე ქართლისაჲ"]] მოგვითხრობს, მეფემ აიღო [[ანაკოფია|ანაკოფია]], "მრავალნი ციხენი კლარჯეთისა, შავშეთისა, ჯავახეთისა და არტანისა". აგრეთვე კარის ციხე-ქალაქი ("ციხე ქუეყანა"), "სიმაგრენი ვანანდისა და კარნიფორისანი" და გააქცია თურქები.
+[[1074]] ივანე ლიპარიტის ძე კვლავ განუდგა მეფეს. გიორგი II-მ მესხთა ლაშქრით და კახთა მეფე [[აღსართან I| აღსართანის]] დახმარებით გამდგარი ფეოდალი დაამარცხა. ლიპარიტს ლოწობანი წაართვეს და სამეფოს შემოუერთეს. მალე მეფე და ივანე ლიპარიტის ძე დაზავდნენ. ივანე ერთგულების პირობით [[კლდეკარი|კლდეკარისა]] და სამშვილდის ერისთავად იქნა დამტკიცებული. მაგრამ ურჩმა ფეოდალმა გიორგი II-ის მეციხოვნეებს [[გაგი|გაგი]] გამოსტყუა და განძის პატრონს ფადლონს მიჰყიდა.
+
+[[1073]] ან [[1074]] საქართველოს შემოესია "დიდ სელჩუკთა" სახელმწიფოს სულთანი [[მალიქ-შაჰი]], რომელმაც აიღო სამშვილდე, მოარბია [[ქართლი]] და დიდძალი ტყვიითა და ნადავლით უკან გაბრუნდა. იმავე ხანებში სულთნის ლაშქრით საქართველოს შემოესია მალიქ-შაჰის მიერ განძის გამგედ დანიშნული სარანგი. გიორგი II-მ აღსართან კახთა მეფე მოიშველია და [[ფარცხისის ბრძოლა 1074|ფარცხისთან]] დაამარცხა მტერი. ამ გამარჯვების შემდეგ, როგორც [[მატიანე ქართლისა|"მატიანე ქართლისაჲ"]] მოგვითხრობს, მეფემ აიღო [[ანაკოფია|ანაკოფია]], "მრავალნი ციხენი კლარჯეთისა, შავშეთისა, ჯავახეთისა და არტანისა". აგრეთვე კარის ციხე-ქალაქი ("ციხე ქუეყანა"), "სიმაგრენი ვანანდისა და კარნიფორისანი" და გააქცია თურქები.
 
 საერთაშორისო მდგომარეობის გართულებამ ([[1074]] [[ბიზანტია]] იძულებული გახდა თავისი სამფლობელოს აღმოსავლეთ მიწა-წყლის დიდი ნაწილი თურქებისათვის დაეთმო) ახალი საფრთხე შეუქმნა საქართველოს: მტერი უკვე ორი მხრიდან ―  დასავლეთიდან და აღმოსავლეთიდან უტევდა. [[ყველისციხე|ყველისციხესთან]] მდგომ გიორგი II-ს თავს დაესხნენ დიდძალი თურქები ამირა აჰმადის მეთაურობით. მეფე იძულებული გახდა უბრძოლველად გასცლოდა მტერს. თურქებმა იავარჰყვეს საქართველოს დიდი ნაწილი და აურაცხელი ალაფით გაბრუნდნენ უკან.
 
-XI საუკუნის 80-იანი წწ. დამდეგიდან დაიწყო თურქ-სელჩუკთა ახალი [[დიდი თურქობა|შემოსევები]]. გიორგი II დიდებულებთან მოთათბირების შემდეგ სულთან მალიქ-შაჰს ეახლა (სავარაუდებელია 1081-82) და მორჩილება გამოუცხადა. საქართველო თურქ-სელჩუკების მოხარკე გახდა. კმაყოფილმა მალიქ-შაჰმა საქართველოს სამეფო გაათავისუფლა "ზედამარბეველთაგან", გიორგი II-ს [[კახეთი|კახეთ]]-[[ჰერეთი]] მისცა და მის შესაერთებლად ლაშქარი  გამოაყოლა. მტრისა და ქართველთა შეერთებული ჯარი კახეთს შეესია, ვეჯინის ციხეს გარშემოადგა. ვეჯინის ალყა ხანგრძლივი გამოდგა. ზამთარში, ალბათ  გარკვეული მოსაზრებით, გიორგი II-მ ალყა მოხსნა და დასავლეთ საქართველოში გადავიდა. ამის გამო გიორგი II-ს ჰკიცხავს [[დავით აღმაშენებელი|დავით აღმაშენებლის]] ისტორიკოსი. ქვეყნის ისედაც გართულებულ მდგომარეობას ზედ დაერთო სტიქიური ― უბედურება მიწისძვრა, რომელიც თითქმის მთელი წელიწადი გაგრძელდა და მრავალი ადამიანი იმსხვერპლა. მძიმე საშინაო და საგარეო მდგომარეობისა და მწვავე სახელმწიფოებრივი კრიზისის პირობებში საქართველოს სამეფო კარზე მოხდა გადატრიალება: 1089 გიორგი II ტახტიდან გადააყენეს და მეფედ მისი ძე [[დავით აღმაშენებელი|დავითი]] (შემდეგში აღმაშენებლად წოდებული) დასვეს. ისტორიკოსთა ერთი ნაწილი ([[ბატონიშვილი, ვახუშტი|ვახუშტი ბაგრატიონი]], [[ბროსე, მარი|მ. ბროსე]]) თვლის , რომ გიორგი II გარდაიცვალა 1089, ხოლო ზოგიერთი ([[ხიზანიშვილი ნიკო|ნ.ურბნელი]], [[ჟორდანია, თევდორე|თ.ჟორდანია]], [[კარიჭაშვილი,დავით|დ. კარიჭაშვილი]]) გიორგი II-ის გარდაცვალების თარიღად 1112 დებს.
+XI საუკუნის 80-იანი წწ. დამდეგიდან დაიწყო თურქ-სელჩუკთა ახალი [[დიდი თურქობა|შემოსევები]]. გიორგი II დიდებულებთან მოთათბირების შემდეგ სულთან მალიქ-შაჰს ეახლა (სავარაუდებელია 1081-1082) და მორჩილება გამოუცხადა. საქართველო თურქ-სელჩუკების მოხარკე გახდა. კმაყოფილმა მალიქ-შაჰმა საქართველოს სამეფო გაათავისუფლა "ზედამარბეველთაგან", გიორგი II-ს [[კახეთი|კახეთ]]-[[ჰერეთი]] მისცა და მის შესაერთებლად ლაშქარი  გამოაყოლა. მტრისა და ქართველთა შეერთებული ჯარი კახეთს შეესია, ვეჯინის ციხეს გარშემოადგა. ვეჯინის ალყა ხანგრძლივი გამოდგა. ზამთარში, ალბათ  გარკვეული მოსაზრებით, გიორგი II-მ ალყა მოხსნა და დასავლეთ საქართველოში გადავიდა. ამის გამო გიორგი II-ს ჰკიცხავს [[დავით აღმაშენებელი|დავით აღმაშენებლის]] ისტორიკოსი. ქვეყნის ისედაც გართულებულ მდგომარეობას ზედ დაერთო სტიქიური ― უბედურება მიწისძვრა, რომელიც თითქმის მთელი წელიწადი გაგრძელდა და მრავალი ადამიანი იმსხვერპლა. მძიმე საშინაო და საგარეო მდგომარეობისა და მწვავე სახელმწიფოებრივი კრიზისის პირობებში საქართველოს სამეფო კარზე მოხდა გადატრიალება: [[1089]] გიორგი II ტახტიდან გადააყენეს და მეფედ მისი ძე [[დავით აღმაშენებელი|დავითი]] (შემდეგში აღმაშენებლად წოდებული) დასვეს. ისტორიკოსთა ერთი ნაწილი ([[ვახუშტი ბატონიშვილი|ვახუშტი ბაგრატიონი]], [[ბროსე, მარი|მ. ბროსე]]) თვლის , რომ გიორგი II გარდაიცვალა [[1089]], ხოლო ზოგიერთი ([[ხიზანიშვილი, ნიკო|ნ.ურბნელი]], [[ჟორდანია, თევდორე|თ.ჟორდანია]], [[კარიჭაშვილი,დავით|დ. კარიჭაშვილი]]) გიორგი II-ის გარდაცვალების თარიღად [[1112]] დებს.
 
 
 [[კატეგორია:ქართველები]]
-
 [[კატეგორია:საქართველოს მეფეები]]
 
 [[ca:Giorgi II de Geòrgia]]
