*Empty MediaWiki Message*

--- a/გიორგი_II_(კახეთის_მეფე).mw
+++ b/გიორგი_II_(კახეთის_მეფე).mw
@@ -1,3 +1,7 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გიორგი II'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გიორგი II]]
+|}</small>
 '''გიორგი II''', ავგიორგი, [[კახეთის სამეფო |კახეთის]] მეფე [[1511]]-[[1513]], [[ალექსანდრე I, გიორგი VIII-ის ძე|ალექსანდრე I-ის]] ძე. სამეფო ტახტის მისაკუთრების მიზნით [[1511]] მოკლა მამა, შეიპყრო უმცროსი ძმა დიმიტრი, დასთხარა თვალები და კახეთიდან გააძევა, რის გამო მას ავგიორგი შეარქვეს. გიორგი II გამუდმებით არბევდა და აოხრებდა [[ქართლი|ქართლს]]. ერთ-ერთი ასეთი ლაშქრობის დროს [[ბაგრატ მუხრანბატონი|ბაგრატ მუხრანბატონმა]] შეიპყრო და [[მუხრანის ციხე|მუხრანის ციხეში]] გამოკეტა, სადაც მალე გარდაიცვალა.
 
 [[კატეგორია:ქართველები]]
