*Empty MediaWiki Message*

--- a/გიორგი_II_(იმერეთის_მეფე).mw
+++ b/გიორგი_II_(იმერეთის_მეფე).mw
@@ -1,3 +1,7 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გიორგი II'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გიორგი II]]
+|}</small>
 '''გიორგი II''', [[იმერეთის სამეფო | იმერეთის]] მეფე [[1565]]-[[1585]], [[ბაგრატ III, ალექსანდრე II-ის ძე| ბაგრატ III-ის]] ძე. მეფობის პირველ წლებში, ოდიშისა და გურიის მთავართა გათიშვის მიზნით, [[გიორგი II გურიელი | გურიელს]] დაუმოყვრდა. [[ლევან I დადიანი |  ლევან I დადიანმა]] გიორგი II-ის ტახტიდან ჩამოგდება და მისი ბიძაშვილის [[ბატონიშვილი, ხოსრო |ხოსრო ბატონიშვილის]] გამეფება განიზრახა. მეფის წინააღმდეგ დადიანს შეუკავშირდა. ჭილაძეთა საგვარეულოს მეთაური [[ჭილაძე, ვარაზ | ვარაზ ჭილაძეც]]. [[1565]] იანეთთან მომხდარ ბრძოლაში გიორგი II-მ დაამარცხა დადიანი, მისი მომხრეები და [[საჯავახო | საჯავახო]] დაიპყრო. მეფის გაძლიერების შიშმა დადიანი და გურიელი შეაკავშირა. მათ შეერთებული ძალით წაართვეს გიორგი II-ს საჯავახო და შუაზე გაიყვეს. ამ შინაფეოდალური ომის გარდა გიორგი II-ს ბრძოლა უხდებოდა ოსმალო დამპყრობლების წინააღმდეგაც. [[1578]] მან ლიხის მთის სიმაგრეებთან დაამარცხა და უკუაგდო ლალაფაშას მიერ იმერეთის დასალაშქრად გამოგზავნილი რაზმი.
 
 
