--- a/გიორგი_II_გურიელი.mw
+++ b/გიორგი_II_გურიელი.mw
@@ -1,4 +1,9 @@
-'''გიორგი II გურიელი''' (―    †     [[1600]]), გურიის მთავარი [[1566]]-[[1583]], [[1587]]-[[1600]], [[როსტომ I გურიელი | როსტომ I გურიელის]] ძე. მის დროს გურიის სამთავრომ შემოიერთა საჯავახოს ნაწილი, ე. წ. გურიის საჯავახო ირან-ოსმალეთის [[1578]]-[[1590]] ომის დროს გიორგი II გურიელი იძულებული გახდა ოსმალეთს დამორჩილებოდა [[1581]] მეფესთან ერთად ქართლზე ელაშქრა. [[1583]] [[მამია IV დადიანი | მამია IV დადიანის]] მიერ დამარცხებული გიორგი II გურიელი [[სტამბოლი | სტამბოლს]] გაიქცა. [[1587]] ოსმალთა ჯარის შემწეობით კვლავ გაბატონდა.
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გიორგი II'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გიორგი II]]
+|}</small>
+'''გიორგი II გურიელი''' (†     [[1600]]), [[გურიის სამთავრო|გურიის მთავარი]] [[1566]]-[[1583]], [[1587]]-[[1600]], [[როსტომ I გურიელი | როსტომ I გურიელის]] ძე. მის დროს გურიის სამთავრომ შემოიერთა საჯავახოს ნაწილი, ე. წ. გურიის საჯავახო ირან-ოსმალეთის [[1578]]-[[1590]] ომის დროს გიორგი II გურიელი იძულებული გახდა ოსმალეთს დამორჩილებოდა [[1581]] მეფესთან ერთად ქართლზე ელაშქრა. [[1583]] [[მამია IV დადიანი | მამია IV დადიანის]] მიერ დამარცხებული გიორგი II გურიელი [[სტამბოლი | სტამბოლს]] გაიქცა. [[1587]] ოსმალთა ჯარის შემწეობით კვლავ გაბატონდა.
 
 
 [[კატეგორია:ქართველები]]
+[[კატეგორია:გარდაცვლილი 1600]]
