*Empty MediaWiki Message*

--- a/გიორგი_II_დადიანი.mw
+++ b/გიორგი_II_დადიანი.mw
@@ -1,3 +1,7 @@
-'''გიორგი II დადიანი''', [[ოდიში | ოდიშის]] ერისთავი [[1345]]-[[1384]]. ჰქონდა მანდატურთუხუცესის ტიტული. დაკრძალულია [[ხობი | ხობის]] მონასტერში.
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გიორგი II'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გიორგი II]]
+|}</small>
+'''გიორგი II დადიანი''', [[ოდიში | ოდიშის]] ერისთავი [[1345]]-[[1384]]. ჰქონდა [[მანდატურთუხუცესი|მანდატურთუხუცესის]] ტიტული. დაკრძალულია [[ხობი | ხობის]] მონასტერში.
 
 [[კატეგორია:ქართველები]]
