--- a/გიორგი_IV_ლაშა.mw
+++ b/გიორგი_IV_ლაშა.mw
@@ -1,5 +1,11 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გიორგი IV'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გიორგი IV]]
+|}</small>
+
 [[image:Georgia-Lasha.jpg|thumb|left|გიორგი IV ლაშა]]
-'''გიორგი IV ლაშა''' (* [[1192]] ―  †  [[18 იანვარი]]. [[1223]]), [[საქართველო|საქართველოს]] მეფე [[1213]]-იდან.  [[თამარი|თამარ მეფის]] და [[დავით სოსლანი | დავით სოსლანის]] ძე.
+
+'''გიორგი IV ლაშა''' (* [[1192]] ―  †  [[18 იანვარი]], [[1223]]), [[საქართველო|საქართველოს]] მეფე [[1213]]-იდან.  [[თამარი|თამარ]] მეფის და [[დავით სოსლანი | დავით სოსლანის]] ძე.
 
 [[1207]] თამარმა თანამოსაყდრედ დაისვა და ამ დროიდან მონაწილეობდა სახელმწიფოს მართვასა და ლაშქრობებში. თამარის გარდაცვალების შემდეგ გიორგი IV ერთპიროვნული მმართველი გახდა, მისი სურვილი იყო განემტკიცებინა მეფის ხელისუფლება, შეენარჩუნებინა სახელმწიფოს მთლიანობა და შემოემტკიცებინა ყმადნაფიცი ქვეყნები, რომლებიც ცდილობდნენ საქართველოს სამეფოს ვასალობისაგან განთავისუფლებას.
 
