--- a/გიორგი_IV_(გოჩია).mw
+++ b/გიორგი_IV_(გოჩია).mw
@@ -1,3 +1,8 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გიორგი IV'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გიორგი IV]]
+|}</small>
+
 '''გიორგი IV გოჩია''', იმერეთის მეფე [[1696]]-[[1697]]. [[ბაგრატიონები | ბაგრატიონთა]] იმერეთის შტოს წარმომადგენელი, გამეფებამდე ცხოვრობდა ოდიშში. [[1696]] იმერეთის თავადებმა [[არჩილ II]] გადააყენეს და მეფედ გიორგი IV გამოაცხადეს. მაგრამ იგი მეფობისათვის შეუფერებელი გამოდგა. სამეფოს ფაქტობრივად მისი სიმამრი [[აბაშიძე, გიორგი-მალაქია | გიორგი-მალაქია აბაშიძე]] განაგებდა. [[1697]] თავადებმა გიორგი IV ტახტიდან გადააყენეს და იმერეთის მეფედ კვლავ არჩილი დასვეს.
 
 
