*Empty MediaWiki Message*

--- a/გიორგი_V_ბრწყინვალე.mw
+++ b/გიორგი_V_ბრწყინვალე.mw
@@ -1,3 +1,8 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გიორგი V'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გიორგი V]]
+|}</small>
+
 '''გიორგი V ბრწყინვალე''', [[საქართველო|საქართველოს]] მეფე [[1314]]-[[1346]], [[დემეტრე II, თავდადებული|დემეტრე II თავდადებულის]] ძე.
 
 აღიზარდა [[სამცხე|სამცხეში]], მისი პაპის (დედის მხარე) [[ბექა I|ბექა I ჯაყელის]] (მანდატურთუხუცესის) კარზე. [[1299]] ყაზან-ყაენმა მცირეწლოვანი გიორგი საკუთარი ძმის [[დავით VIII|დავით VIII-ის]] წინააღმდეგ ბრძოლაში ჩააბა - მეფედ დანიშნა, მაგრამ მისი უფლებები [[თბილისი|თბილისს]] არ სცილდებოდა და ამიტომ "თბილისის მეფეს" უწოდებდნენ. ამავე  მიზნით გამოიყენა ყაენმა დავით VIII-ის მეორე ძმა [[ვახტანგ III]] (მეფობდა 1302-08). [[1314]], დავით VIII-ისა და ვახტანგ III-ის გარდაცვალების შემდეგ, გიორგი V-მ მიიღო მეფობა. მას სამემკვიდროდ ეკონომიკურად დასუსტებული და პოლიტიკურად დაშლილი ქვეყანა ერგო.
