--- a/გიორგი_V_გურიელი.mw
+++ b/გიორგი_V_გურიელი.mw
@@ -1,3 +1,7 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გიორგი V'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გიორგი V]]
+|}</small>
 '''გიორგი V გურიელი''', [[გურიის სამთავრო | გურიის]] მთავარი [[1755]]-[[1758]], [[1765]]-[[1771]] და [[1776]]-[[1788]]. [[გიორგი IV გურიელი | გიორგი IV გურიელის]] ძე. მთავრობდა ოსმალთა ხელშეწყობით, რუსეთ-ოსმალეთის [[1768]]-[[1774]] ომის დასაწყისში ნეიტრალური პოზიცია ეკავა; [[1771]] წლის 3 იანვარს ფოთთან თურქების დამარცხების შემდეგ, ჩაება მათ წინააღმდეგ ბრძოლაში. [[1784]] მარტში გურიის ლაშქარი [[სოლომონ I | სოლომონ I-ს]] ახლდა ჩაქვზე ლაშქრობაში. ამ ლაშქრობის მარცხის შედეგად გურიის სამთავრომ საბოლოოდ დაკარგა ქობულეთის მხარე. ამის შემდეგ გიორგი V გურიელი შეეცადა რუსეთთან დაკავშირებას, მაგრამ ეს ცდა უშედეგოდ დამთავრდა. [[1788]] ღრმად მოხუცებული გიორგი V გურიელი შინაური აშლილობის გამო იძულებული გახდა [[გურიელები | გურიელობა]] უფროსი ვაჟის - სიმონისათვის დაეთმო. 
 
 
