--- a/გიორგი_VI_მცირე.mw
+++ b/გიორგი_VI_მცირე.mw
@@ -1,3 +1,7 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გიორგი VI'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გიორგი VI]]
+|}</small>
 '''გიორგი VI მცირე''', საქართველოს მეფე 1308-1313, [[დავით VIII|დავით VIII-ის]] ძე. მისი მეფობა ფიქტიური იყო. [[მონღოლები|მონღოლებმა]] ჯერ კიდევ მამამისის სიცოცხლეში გაამეფეს და მეურვედ დაუნიშნეს [[დემეტრე II, თავდადებული|დემეტრე II-ის]] ვაჟი [[გიორგი V ბრწყინვალე |გიორგი]] (შემდეგ გიორგი V ბრწყინვალე).
 
 
