*Empty MediaWiki Message*

--- a/გიორგი_VII_(საქართველოს_მეფე).mw
+++ b/გიორგი_VII_(საქართველოს_მეფე).mw
@@ -1,9 +1,10 @@
-'''გიორგი VII''', საქართველოს მეფე 1393-1407, [[ბაგრატ V | ბაგრატ V-ის]] ძე. მამამისის სიცოცხლეშივე განაგებდა საქართველოს სხვადასხვა კუთხეს და წყაროებშიც ამ დროიდან იხსენიება მეფედ. გიორგი VII-ის მეფობა დაემთხვა საქართველოს ძნელბედობა - [[თემურლენგის ლაშქრობანი საქართველოში | თემურლენგის შემოსევების]] ხანას. უთანასწორო ბრძოლაში გიორგი VII დამარცხდა და იძულებული გახდა დამპყრობელთან დაედო ზავი, რომლის თანახმად ხარკის გადახდა და სამხედრო სამსახური იკისრა.
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გიორგი VII'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გიორგი VII]]
+|}</small>
+'''გიორგი VII''', საქართველოს მეფე [[1393]]-[[1407]], [[ბაგრატ V | ბაგრატ V-ის]] ძე. მამამისის სიცოცხლეშივე განაგებდა საქართველოს სხვადასხვა კუთხეს და წყაროებშიც ამ დროიდან იხსენიება მეფედ. გიორგი VII-ის მეფობა დაემთხვა საქართველოს ძნელბედობა - [[თემურლენგის ლაშქრობანი საქართველოში | თემურლენგის შემოსევების]] ხანას. უთანასწორო ბრძოლაში გიორგი VII დამარცხდა და იძულებული გახდა დამპყრობელთან დაედო ზავი, რომლის თანახმად ხარკის გადახდა და სამხედრო სამსახური იკისრა.
 
 
 
 [[კატეგორია:ქართველები]]
-
-
-
 [[კატეგორია:საქართველოს მეფეები]]
