--- a/გიორგი_VII_(იმერეთის_მეფე).mw
+++ b/გიორგი_VII_(იმერეთის_მეფე).mw
@@ -1,4 +1,8 @@
-'''გიორგი VII''', იმერეთის მეფე [[1741]], [[გიორგი VI, იმერეთის მეფე | გიორგი VI-ისა]] და [[მამია III გურიელი | მამია III გურიელის]] ასულის თამარის ვაჟი. გაამეფეს ოსმალებმა, მაგრამ იმავე წლის შემოდგომაზე გადააყენეს და ტახტი მის ძმას [[ალექსანდრე V | ალექსანდრე V-ს]] დაუბრუნეს. გიორგი VII ოდიშს წავიდა. შემდეგ, როგორც ჩანს, [[სოლომონ I | სოლომონ I-ის]] დროს იმერეთში დაბრუნდა. ცოცხალი ჩანს [[1772]] წელს.
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''გიორგი V'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[გიორგი V]]
+|}</small>
+'''გიორგი VII''', [[იმერეთის სამეფო|იმერეთის]] მეფე [[1741]], [[გიორგი VI, იმერეთის მეფე | გიორგი VI-ისა]] და [[მამია III გურიელი | მამია III გურიელის]] ასულის თამარის ვაჟი. გაამეფეს ოსმალებმა, მაგრამ იმავე წლის შემოდგომაზე გადააყენეს და ტახტი მის ძმას [[ალექსანდრე V | ალექსანდრე V-ს]] დაუბრუნეს. გიორგი VII ოდიშს წავიდა. შემდეგ, როგორც ჩანს, [[სოლომონ I | სოლომონ I-ის]] დროს იმერეთში დაბრუნდა. ცოცხალი ჩანს [[1772]] წელს.
 
 
 
