*Empty MediaWiki Message*

--- a/ელიგუმ_ორბელი.mw
+++ b/ელიგუმ_ორბელი.mw
@@ -1,4 +1,4 @@
-'''ელიგუმ ორბელი''' (†  დაახლოებით [[1195]]/[[1196]]), XII საუკუნის II ნახევრის მოღვაწე, საქართველოდან გადახვეწილი [[ორბელი, ლიპარიტ სუმბატის ძე|ლიპარიტ ორბელის ძე]]. სტეფანოს ორბელიანის ცნობით, მან ირანის ათაბაგისაგან სამამულოდ მიიღო ქალაქი ჰამიანი და 12 წლით დაინიშნა რეის, ისპაჰანისა და ყაზვინის ამირად. შემდეგ ელიგუმმა მამულები მიიღო ნახევაჭანში (ციხე ერენჯაკი, სოფელი ჭაჰუკი და ქალასრაჰი) და გამუსლიმანდა.
+'''ელიგუმ ორბელი''' (†  დაახლოებით [[1195]]/[[1196]]), XII საუკუნის II ნახევრის მოღვაწე, საქართველოდან გადახვეწილი [[ორბელი, ლიპარიტ სუმბატის ძე|ლიპარიტ ორბელის ძე]]. [[სტეფანოს ორბელიანი|სტეფანოს ორბელიანის]] ცნობით, მან ირანის ათაბაგისაგან სამამულოდ მიიღო ქალაქი ჰამიანი და 12 წლით დაინიშნა რეის, ისპაჰანისა და ყაზვინის ამირად. შემდეგ ელიგუმმა მამულები მიიღო ნახევაჭანში (ციხე ერენჯაკი, სოფელი ჭაჰუკი და ქალასრაჰი) და გამუსლიმანდა.
 
 
 [[კატეგორია:ქართველები]]
