*Empty MediaWiki Message*

--- a/ცნობილი_ქართველები:_ო.mw
+++ b/ცნობილი_ქართველები:_ო.mw
@@ -36,7 +36,7 @@
 * [[ორბელი, ივანე]] - მოღვაწე
 * [[ორბელი, ივანე სუმბატის ძე]] - სახელმწიფო მოღვაწე
 * [[ორბელი, ლიპარიტ]] - სახელმწიფო მოღვაწე
-* [[ორბელი, ლიპარიტ სუმბათის ძე]] - პოლიტიკური მოღვაწე
+* [[ორბელი, ლიპარიტ სუმბატის ძე]] - პოლიტიკური მოღვაწე
 * [[ორბელი, სუმბატ]] - სახელმწიფო მოღვაწე
 * [[ორბელი, სუმბატ ლიპარიტის ძე]] - პოლიტიკურო მოღვაწე
 * [[ორბელი, ტარსაიჭ]] - სახელმწიფო მოღვაწე
