*Empty MediaWiki Message*

--- a/ანტონ_ცაგარელ-ჭყონდიდელი.mw
+++ b/ანტონ_ცაგარელ-ჭყონდიდელი.mw
@@ -1,7 +1,13 @@
-'''ანტონ ცაგარელ-ჭყონდიდელი''' (―  †  [[1815]]), ქართველი საეკლესიო მოღვაწე, მქადაგებელი. სამეგრელოს მთავრის [[ოტია დადიანი | ოტია დადიანის]] ვაჟიშვილი. 1761 მიიღო ცაგერლობა (ცაგერის ეპოსკოსობა). [[1777]] დაინიშნა ჭყონდიდლად. [[1788]] წელს უარი სთქვა ეპისკოპოსობაზე და განდგა უბრალო მღვდლად თავისივე დაარსებულ ნახარეუბოს მონასტერში. ანტონ ცაგარელ-ჭყონდიდელის ქადაგებანი ძირითადად ზნეობრივ-დოგმატიკური ხასიათისაა. ეხება სოციალურ საკითხებსაც - გმობს გლეხთა ექსპლუატაციიას. სომხურიდან გადმოაკეთა საღვთისმეტყველო თხზულება  სახელად "წიგნი ჭეშმარიტი ღვთისმეტყველებისა", რომელიც [[ალბერტ დიდის]] საღვთისმეტყველო მოძღვრებაზეა აგებული და "დიდი ლოღიკა" [[ანტონ კოვადის]] წიგნიდან "ჭეშმარიტი და შეურყვნელი ფილოსოფიური მოძღვრება თომა აქვინელისა."
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''დადიანი'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[დადიანი]]
+|}</small>
+
+'''ანტონ ცაგარელ-ჭყონდიდელი''' (†  [[1815]]), ქართველი საეკლესიო მოღვაწე, მქადაგებელი. სამეგრელოს მთავრის [[ოტია დადიანი | ოტია დადიანის]] ვაჟიშვილი. [[1761]] მიიღო ცაგერლობა (ცაგერის ეპისკოსობა). [[1777]] დაინიშნა ჭყონდიდლად. [[1788]] წელს უარი სთქვა ეპისკოპოსობაზე და განდგა უბრალო მღვდლად თავისივე დაარსებულ ნახარეუბოს მონასტერში. ანტონ ცაგარელ-ჭყონდიდელის ქადაგებანი ძირითადად ზნეობრივ-დოგმატიკური ხასიათისაა. ეხება სოციალურ საკითხებსაც - გმობს გლეხთა ექსპლუატაციიას. სომხურიდან გადმოაკეთა საღვთისმეტყველო თხზულება  სახელად "წიგნი ჭეშმარიტი ღვთისმეტყველებისა", რომელიც [[ალბერტ დიდის]] საღვთისმეტყველო მოძღვრებაზეა აგებული და "დიდი ლოღიკა" [[ანტონ კოვადის]] წიგნიდან "ჭეშმარიტი და შეურყვნელი ფილოსოფიური მოძღვრება თომა აქვინელისა."
 
 
 
 
 [[კატეგორია:ქართველები]]
+[[კატეგორია:ქართველი საეკლესიო მოღვაწეები]]
 [[კატეგორია:გარდაცვლილი 1815]]
