*Empty MediaWiki Message*

--- a/ბედან_დადიანი.mw
+++ b/ბედან_დადიანი.mw
@@ -1,3 +1,8 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''დადიანი'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[დადიანი]]
+|}</small>
+
 '''ბედან (ბედიან) დადიანი''', [[ოდიში|ოდიშის]] [[ერისთავი (თანამდებობა)|ერისთავი]] XII საუკუნის უკანასკნელ მეოთხედსა და XIII საუკუნის დასაწყისში. მონაწილეობდა [[იური ანდიას ძე|გიორგი რუსის]] გასამეფებლად დიდგვარიანთა მიერ მოწყობილ აჯანყებაში.
 
 
