*Empty MediaWiki Message*

--- a/ბედან_ჯუანშერის_ძე_დადიანი.mw
+++ b/ბედან_ჯუანშერის_ძე_დადიანი.mw
@@ -1,3 +1,8 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''დადიანი'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[დადიანი]]
+|}</small>
+
 '''ბედან (ბედიან) ჯუანშერის ძე დადიანი''',  [[ოდიშის სამეფო|ოდიშის]] [[ერისთავი]] XVIII საუკუნის შუა წლებში. მხარში ედგა ცენტრალურ ხელისუფლებას მონღოლთა წინააღმდეგ ბრძოლაში. მონაწილეობდა [[კოხტასთავის შეითქმულება|კოხტასთავის]] შეითქმულებაში. [[1259]]-[[1261]] [[დავით VI |დავით VI ნარინს]] ეხმარებოდა მონღოლთა წინაარმდეგ და დასავლეთ საქართველოში მეფის ხელისუფლების განმტკიცებისათვის ბრძოლებში. ჰქონდა [[დავით VI|დავით VI-ის]] სამეფო კარის [[მანდატურთუხუცესი|მანდატურთუხუცესის]] ტიტული.
 
 
