*Empty MediaWiki Message*

--- a/ვარდან_დადიანი.mw
+++ b/ვარდან_დადიანი.mw
@@ -1,4 +1,9 @@
-'''ვარდან დადიანი''', საქართველოს დიდგვაროვანი ფეოდალი XII საუკუნის II ნახევარში. [[თამარი|თამარ მეფის]] კარზე ეჭირა ჯერ [[ჩუხჩარხი|ჩუხჩარხის]] თანამდებობდა, შემდეგ [[მსახურთუხუცესი|მსახურთუხუცესობა]]. დადიანმა აქტიური მონაწილეობა მიიღო [[იური ანდრიას ძე|გიორგი რუსი]]ს გასამეფებლად დიდგვაროვანთა მიერ მოწყობილ აჯანყებაში. მისი თაოსნობით გამოიყვანეს გიორგი ტაოდან დასავლეთ საქართველოში და მეფედ აკურთხეს. აჯანყების დამარცხების შემდეგ დადიანმა დაკარგა მსახურთუხუცესობა და ჩამოშორდა აქტიულ პოლიტიკურ ცხოვრებას.
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''დადიანი'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[დადიანი]]
+|}</small>
+
+'''ვარდან დადიანი''', საქართველოს დიდგვაროვანი ფეოდალი XII საუკუნის II ნახევარში. [[თამარი|თამარ მეფის]] კარზე ეჭირა ჯერ [[ჩუხჩარხი|ჩუხჩარხის]] თანამდებობდა, შემდეგ [[მსახურთუხუცესი|მსახურთუხუცესობა]]. დადიანმა აქტიური მონაწილეობა მიიღო [[იური ანდრიას ძე|გიორგი რუსის]] გასამეფებლად დიდგვაროვანთა მიერ მოწყობილ აჯანყებაში. მისი თაოსნობით გამოიყვანეს გიორგი ტაოდან დასავლეთ საქართველოში და მეფედ აკურთხეს. აჯანყების დამარცხების შემდეგ დადიანმა დაკარგა მსახურთუხუცესობა და ჩამოშორდა აქტიულ პოლიტიკურ ცხოვრებას.
 
 
 [[კატეგორია:ქართველები]]
