*Empty MediaWiki Message*

--- a/ნიკო_დადიანი.mw
+++ b/ნიკო_დადიანი.mw
@@ -1,4 +1,9 @@
-'''ნიკო დავითის ძე  დადიანი''' (*[[ 4 იანვარი]], [[1847]], [[ზუგდიდი]] ―   †  [[23 იანვარი]], [[1903]], [[სანქტ-პეტერგურგი]]), [[სამეგრელო|სამეგრელოს]] უკანასკნელი მთავარი (* [[1853]]-იდან), რუსეთის არმიის გენერალ-მაიორი ([[1878]]). 
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''დადიანი'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[დადიანი]]
+|}</small>
+
+'''ნიკო დავითის ძე  დადიანი''' (*[[ 4 იანვარი]], [[1847]], [[ზუგდიდი]] ―   †  [[23 იანვარი]], [[1903]], [[სანქტ-პეტერბურგი]]), [[სამეგრელო|სამეგრელოს]] უკანასკნელი მთავარი (* [[1853]]-იდან), რუსეთის არმიის გენერალ-მაიორი ([[1878]]). 
 
 განათლება მიიღო [[პარიზი|პარიზში]]. მისი მცირეწლოვნების გამო სამთავროს განაგებდა დედამისი [[ჭავჭავაძე, ეკატერინე| ეკატერინე ჭავჭავაძე]], რომლის დროსაც ([[1857]]) ფაქტობრივად სამეგრელოში მთავრობა გაუქმდა. [[1868]] დადიანმა უარი თქვა(დე-იურე) სამეგრელოს მთავრის ტიტულზე. [[1875]]-იდან მსახურობდა კავალერგარდის პოლკში. მონაწილეობდა [[რუსეთ-ოსმალეთის ომი 1877-1878|რუსეთ-ოსმალეთის ომში]] (1877-1878). [[1877]]-დან პოლკოვნიკი. ბულგარეთის ტახტიდან [[ბატენბერგი|ბატენბერგის]] ჩამოგდების ([[1886]] წლის [[21 აგვისტო]]) შემდეგ რუსეთის მთავრობამ დადიანი ბულგარეთის მთავრის კანდიდატად წამოაყენა. დადიანმა თავისი ბიბლიოთეკა (169 ხელნაწერი და წიგნები) უსასყიდლოდ გადასცა [[ქართველთა შორის წერა-კითხვის გამავრცელებელი საზოგადოება|ქართველთა შორის წერა-კითხვის გამავრცელებელ საზოგადოებას]].
 
