*Empty MediaWiki Message*

--- a/შალვა_დადიანი.mw
+++ b/შალვა_დადიანი.mw
@@ -1,3 +1,8 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''დადიანი'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[დადიანი]]
+|}</small>
+
 '''შალვა ნიკოლოზის ძე დადიანი''' (* [[9 მაისი]], [[21 მაისი]], [[1874]], [[ზესტაფონი]]      ―        †[[15 მარტი]], [[1959]], [[თბილისი]]), [[ქართველები|ქართველი]] მწერალი, დრამატურგი, მსახიობი, თეატრის მოღვაწე; საქართველოს სახალხო არტისტი ([[1923]]). სკკპ-ის წევრი [[1945]] წლიდან.
 
 ==ბიოგრაფია==
