*Empty MediaWiki Message*

--- a/დავით_I_კურაპალატი.mw
+++ b/დავით_I_კურაპალატი.mw
@@ -1,4 +1,9 @@
-'''დავით I კურაპალატი''' (―    †  [[ 881]]), [[ბაგრატ I კურაპალატი | ბაგრატ I-ის]] უფროსი ძე, [[ბაგრატიონები | ბაგრატიონთა]] ტაოს შტოს წარმომადგენელი. კურაპალატი [[876]]-იდან. [[881]] დავით I ვერაგულად მოკლა [[გვარამ (გუარამ) მამფალი | გვარამ (გუარამ) მამფალის]] ძემ [[ნასრა | ნასრამ]]. [[ჯავახიშვილი, ივანე | ი. ჯავახიშვილის]] აზრით, მკვლელობის მიზეზი გახდა შემდეგი გარემოება: როცა [[ლიპარიტ I]] ბაღვაშმა გვარამ მამფალის კუთვნილი თრიალეთის ქვეყანა დაიპყრო და თავის პატრონად და მფარველად დავით I გამოაცხადა, ნასრამ ეს აქტი გვარამის სახლის მფლობელობის ხელყოფად მიიჩნია და მამის შელახული უფლების აღდგენა მოისურვა. 
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "''' დავით'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[დავით]]
+|}</small>
+
+'''დავით I კურაპალატი''' ( †  [[881]]), [[ბაგრატ I კურაპალატი | ბაგრატ I-ის]] უფროსი ძე, [[ბაგრატიონები | ბაგრატიონთა]] ტაოს შტოს წარმომადგენელი.[[ კურაპალატი]] [[876]]-იდან. [[881]] დავით I ვერაგულად მოკლა [[გვარამ (გუარამ) მამფალი | გვარამ (გუარამ) მამფალის]] ძემ [[ნასრა|ნასრამ]]. [[ჯავახიშვილი, ივანე | ი. ჯავახიშვილის]] აზრით, მკვლელობის მიზეზი გახდა შემდეგი გარემოება: როცა [[ლიპარიტ I]] ბაღვაშმა გვარამ მამფალის კუთვნილი თრიალეთის ქვეყანა დაიპყრო და თავის პატრონად და მფარველად დავით I გამოაცხადა, ნასრამ ეს აქტი გვარამის სახლის მფლობელობის ხელყოფად მიიჩნია და მამის შელახული უფლების აღდგენა მოისურვა. 
 
 
 
