*Empty MediaWiki Message*

--- a/დავით_II_(ქართველთა_მეფე).mw
+++ b/დავით_II_(ქართველთა_მეფე).mw
@@ -1,3 +1,8 @@
-'''დავით II''' (― † [[937]]), ქართველთა მეფე [[923]]-[[937]], [[ადარნასე II|ადარნასე II-ის]] ძე, მაგისტროსი, [[ბაგრატიონები|ბაგრატიონთა]] ტაოს შტოს წარმომადგენელი. მის დროს ქართველთა სამეფოში ატეხილი შინაფეოდალური შუღლით ისარგებლა ბიზანტიის იმპერატორმა რომანოზ I-მა და არტანუჯის ციხე დაიკავა, მაგრამ დავით II-მ და [[გურგენ IV|გურგენ IV]] ერისთავთერისთავმა შეძლეს ციხის უომრად დაბრუნება.
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "''' დავით'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[დავით]]
+|}</small>
+
+'''დავით II''' († [[937]]), ქართველთა მეფე [[923]]-[[937]], [[ადარნასე II|ადარნასე II-ის]] ძე, მაგისტროსი, [[ბაგრატიონები|ბაგრატიონთა]] ტაოს შტოს წარმომადგენელი. მის დროს ქართველთა სამეფოში ატეხილი შინაფეოდალური შუღლით ისარგებლა ბიზანტიის იმპერატორმა რომანოზ I-მა და არტანუჯის ციხე დაიკავა, მაგრამ დავით II-მ და [[გურგენ IV|გურგენ IV]] ერისთავთერისთავმა შეძლეს ციხის უომრად დაბრუნება.
 
 [[კატეგორია:ქართველები]]
