--- a/დავით_II_(ქართველთა_მეფე).mw
+++ b/დავით_II_(ქართველთა_მეფე).mw
@@ -6,3 +6,4 @@
 '''დავით II''' († [[937]]), ქართველთა მეფე [[923]]-[[937]], [[ადარნასე II|ადარნასე II-ის]] ძე, მაგისტროსი, [[ბაგრატიონები|ბაგრატიონთა]] ტაოს შტოს წარმომადგენელი. მის დროს ქართველთა სამეფოში ატეხილი შინაფეოდალური შუღლით ისარგებლა ბიზანტიის იმპერატორმა რომანოზ I-მა და არტანუჯის ციხე დაიკავა, მაგრამ დავით II-მ და [[გურგენ IV|გურგენ IV]] ერისთავთერისთავმა შეძლეს ციხის უომრად დაბრუნება.
 
 [[კატეგორია:ქართველები]]
+[[კატეგორია:გარდაცვლილი 937]]
