*Empty MediaWiki Message*

--- a/დავით_II_(კახეთის_მეფე).mw
+++ b/დავით_II_(კახეთის_მეფე).mw
@@ -1,4 +1,9 @@
-'''დავით II, იმამყულ-ხანი''' (― † [[1722]]), [[კახეთის სამეფო | კახეთის]] [[მეფე]] [[1703]]-[[1722]], [[ერეკლე I|ერეკლე I-ის]] ძე. დაიბადა და ბავშვობა გაატარა [[ირანი|ირანში]]. მისი მმართველობის დროს კახეთში ლეკიანობა მძვინვარებდა. [[1706]] ჭარ-ბელაქანში კახელთა მარცხიანი ლაშქრობის შემდეგ [[ლეკები|ლეკებმა]] დაიკავეს ელისენი. დავით II იძულებული გახდა რეზიდენცია ყარაჯიდან [[თელავი|თელავსა]] და [[მანავი|მანავში]] გადაეტანა (ზაფხულობით [[მაღარო|მაღაროს]] იდგა). [[1711]] ირანში გაემგზავრა და [[კახეთი|კახეთის]] მმართველად თავისი ძმა თეიმურაზი და დედა - დედოფალი ანა დატოვა. ამ პერიოდში განსაკუთრებით გახშირდა კახეთზე ლეკთა თავდასხმები, ფეოდალთა თვითნებობა, გლეხთა ანტიფეოდალური [[ბოდბისა და ბოდბისხევის გლეხთა აჯანყებანი 1699, 1711-1716|გამოსვლები]]. ირანიდან დაბრუნების შემდეგ ([[1715]]) დავით II ცდილობდა ქვეყანაში წესრიგის აღდგენას. დაუნათესავდა ქართლის მმართველს იესეს და მისი დახმარებით გაილაშქრა ლეკების წინააღმდეგ, მაგრამ მათთან ბრძოლაში კვლავ დამარცხდა. კახელი ფეოდალები იძულებული გახდნენ ლეკებისათვის ზოგი რამ დაეთმოთ და მათთვის ქართლისა და აზერბაიჯანში სათარეშო გზაც მიეცათ. ამ დროს დაიწყო კახეთის რაიონებში ლეკების ჩამოსახლება. კახელი გლეხები (განსაკუთრებით გაღმა მხარში) მძიმე ფეოდალური ჩაგვრის გამო მასობრივად გადადიოდნენ ლეკების მხარეზე - "ლეკდებოდნენ". ამ მდგომარეობიდან თავის დასაღწევად დავით II-მ დახმარება სთხოვა ქართლის მეფე [[ვახტანგ VI|ვახტანგ VI-ს]], მაგრამ მათი ერთობლივი მოქმედება, მიუხედავად ირანის შაჰის მხარდაჭერისა, მაინც ვერ მოხერხდა.
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "''' დავით'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[დავით]]
+|}</small>
+
+'''დავით II, იმამყულ-ხანი''' († [[1722]]), [[კახეთის სამეფო | კახეთის]] [[მეფე]] [[1703]]-[[1722]], [[ერეკლე I|ერეკლე I-ის]] ძე. დაიბადა და ბავშვობა გაატარა [[ირანი|ირანში]]. მისი მმართველობის დროს კახეთში ლეკიანობა მძვინვარებდა. [[1706]] ჭარ-ბელაქანში კახელთა მარცხიანი ლაშქრობის შემდეგ [[ლეკები|ლეკებმა]] დაიკავეს ელისენი. დავით II იძულებული გახდა რეზიდენცია ყარაჯიდან [[თელავი|თელავსა]] და [[მანავი|მანავში]] გადაეტანა (ზაფხულობით [[მაღარო|მაღაროს]] იდგა). [[1711]] ირანში გაემგზავრა და [[კახეთი|კახეთის]] მმართველად თავისი ძმა თეიმურაზი და დედა - დედოფალი ანა დატოვა. ამ პერიოდში განსაკუთრებით გახშირდა კახეთზე ლეკთა თავდასხმები, ფეოდალთა თვითნებობა, გლეხთა ანტიფეოდალური [[ბოდბისა და ბოდბისხევის გლეხთა აჯანყებანი 1699, 1711-1716|გამოსვლები]]. ირანიდან დაბრუნების შემდეგ ([[1715]]) დავით II ცდილობდა ქვეყანაში წესრიგის აღდგენას. დაუნათესავდა ქართლის მმართველს იესეს და მისი დახმარებით გაილაშქრა ლეკების წინააღმდეგ, მაგრამ მათთან ბრძოლაში კვლავ დამარცხდა. კახელი ფეოდალები იძულებული გახდნენ ლეკებისათვის ზოგი რამ დაეთმოთ და მათთვის ქართლისა და აზერბაიჯანში სათარეშო გზაც მიეცათ. ამ დროს დაიწყო კახეთის რაიონებში ლეკების ჩამოსახლება. კახელი გლეხები (განსაკუთრებით გაღმა მხარში) მძიმე ფეოდალური ჩაგვრის გამო მასობრივად გადადიოდნენ ლეკების მხარეზე - "ლეკდებოდნენ". ამ მდგომარეობიდან თავის დასაღწევად დავით II-მ დახმარება სთხოვა ქართლის მეფე [[ვახტანგ VI|ვახტანგ VI-ს]], მაგრამ მათი ერთობლივი მოქმედება, მიუხედავად ირანის შაჰის მხარდაჭერისა, მაინც ვერ მოხერხდა.
 
 [[კატეგორია:ქართველები]]
 [[კატეგორია:საქართველოს მეფეები]]
