*Empty MediaWiki Message*

--- a/დავით_IV_აღმაშენებელი.mw
+++ b/დავით_IV_აღმაშენებელი.mw
@@ -1,3 +1,8 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "''' დავით'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[დავით]]
+|}</small>
+
 [[სურათი:David the Builder.jpg|thumb|250px|right|დავით IV აღმაშენებელი]]
 '''დავით IV აღმაშენებელი''' (* [[1073]] ― † [[24 იანვარი]]. [[1125]]), [[საქართველო|საქართველოს]] მეფე [[1089]]-1125, [[გიორგი II, საქართველოს მეფე|გიორგი II]]-ის ძე.
 
