*Empty MediaWiki Message*

--- a/დავით_V.mw
+++ b/დავით_V.mw
@@ -1,3 +1,8 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "''' დავით'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[დავით]]
+|}</small>
+
 '''დავით V''', საქართველოს მეფე [[1155]], [[დემეტრე I|დემეტრე I-ის]] უფროსი ძე. უფლისწულობაში დავითმა აზნაურთა ერთი ჯგუფის მხარდაჭერით შეთქმულება მოაწყო დემეტრე I-ის წინააღმდეგ, რომელსაც უმცროსი ვაჟის - [[გიორგი III|გიორგის]] გამეფება სურდა. თავდაპირველად დავითის ცდა მარცხით დამთავრდა, მაგრამ ბოლოს მაინც მიაღწია მეფობას. დემეტრე I იძულებული გახდა ბერად შემდგარიყო. 6 თვის მეფობის შემდეგ დავით V გარდაიცვალა და ტახტზე კვლავ დემეტრე I ავიდა, რომელმაც ახლა უკვე ტახტის მემკვიდრე გიორგი თანამოსაყდრედ დასვა.
 
 [[კატეგორია:ქართველები]]
