*Empty MediaWiki Message*

--- a/დავით_VI_ნარინი.mw
+++ b/დავით_VI_ნარინი.mw
@@ -1,3 +1,8 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "''' დავით'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[დავით]]
+|}</small>
+
 [[image:Davit-narini-1.jpg|thumb|right|300px|'''დავით VI ''ნარინი''''' მეფობაში და ბერობაში   <small>([[გელათის მონასტერი]]. დავით ნარინის ეკვდერი)</small> 
 ]]
 '''დავით VI''' ''ნარინი'' (დაახლოებით * [[1225]] ― † [[1293]]), საქართველოს მეფე [[1245]]([[1247]])-93, [[რუსუდანი|რუსუდან]] მეფის ძე. დაახლოებით [[1230]], როცა აღმოსავლეთ საქართველო ხვარაზმელთ ეპყრათ ხელთ და სამეფო კარი [[ქუთაისი|ქუთაისში]] იყო გახიზნული, მცირეწლოვანი დავითი დედამ თანამოსაყდრედ დასვა. მონღოლებთან რუსუდანის შეთანხმების შემდეგ, დაახლოებით [[1242]]-43, დედა-შვილი [[თბილისი|თბილისში]] დაბრუნდა. იმავე წლებში მონღოლთა ადგილობრივმა ხელისუფლებამ ტახტის მემკვიდრე, ქართველი დიდებულ ფეოდალთა ერთი ჯგუფის თანხლებით, [[ოქროს ურდო|ოქროს ურდოში]] [[ბათო-ყაენი|ბათო-ყაენთან]] გაგზავნა მეფედ დასამტკიცებლად. 
