*Empty MediaWiki Message*

--- a/დავით_IX.mw
+++ b/დავით_IX.mw
@@ -1,6 +1,10 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "''' დავით'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[დავით]]
+|}</small>
+
 '''დავით IX''', საქართველოს მეფე [[1346]]-[[1360]], [[გიორგი V ბრწყინვალე | გიორგი V ბრწყინვალის]] ძე, მისი მეფობის დროს საქართველოში თავი იჩინა ეკონომიურმა კრიზისმა, გაჩნდა შავი ჭირის ეპიდემიაც, რომელმაც მრავალი ადამიანის სიცოცხლე იმსხვერპლა.
 
 
 [[კატეგორია:ქართველები]]
-
 [[კატეგორია:საქართველოს მეფეები]]
